yacc.output
Terminals which are not used

   OR


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt
    2          | stmt_list stmt

    3 stmt: QUIT CMD_FINISH
    4     | EXECFILE FILENAME CMD_FINISH
    5     | SHOW TABLES_IN_SHOW CMD_FINISH
    6     | sql_list CMD_FINISH
    7     | sql_list ';' error_statment CMD_FINISH
    8     | sql_list error_statment CMD_FINISH
    9     | error_statment CMD_FINISH

   10 sql_list: sql
   11         | sql_list ';' sql

   12 sql: create
   13    | drop
   14    | select
   15    | insert
   16    | delete

   17 create: CREATE TABLE table_name '(' create_table_element_list ')'
   18       | CREATE INDEX index_name ON table_name '(' column_name ')'

   19 table_name: NAME

   20 index_name: NAME

   21 column_name: NAME

   22 create_table_element_list: create_table_element
   23                          | create_table_element_list ',' create_table_element

   24 create_table_element: column_def
   25                     | table_constraint_def

   26 column_def: NAME data_type column_def_opt

   27 data_type: CHAR
   28          | CHAR '(' NUMBER ')'
   29          | INTEGER
   30          | FLOAT

   31 column_def_opt: /* empty */
   32               | PRIMARY KEY
   33               | UNIQUE

   34 table_constraint_def: PRIMARY KEY '(' NAME ')'

   35 drop: DROP TABLE table_name
   36     | DROP INDEX index_name

   37 select: SELECT '*' FROM table_name opt_where

   38 opt_where: /* empty */
   39          | WHERE expr_list

   40 expr_list: expr
   41          | expr_list SYS_AND expr

   42 expr: column_value comparison column_name
   43     | column_name comparison column_value

   44 comparison: EQ
   45           | NEQ
   46           | LT
   47           | GT
   48           | LE
   49           | GE

   50 insert: INSERT INTO table_name VALUES insert_val_list

   51 insert_val_list: '(' column_value_list ')'
   52                | insert_val_list ',' '(' column_value_list ')'

   53 column_value_list: column_value
   54                  | column_value_list ',' column_value

   55 column_value: STRING
   56             | NUMBER

   57 delete: DELETE FROM table_name opt_where

   58 error_statment: error
   59               | ERRORTOKEN


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 18 28 34 51 52
')' (41) 17 18 28 34 51 52
'*' (42) 37
',' (44) 23 52 54
';' (59) 7 11
error (256) 58
FILENAME (258) 4
NUMBER (259) 28 56
NAME (260) 19 20 21 26 34
STRING (261) 55
SYS_AND (262) 41
CHAR (263) 27 28
CMD_FINISH (264) 3 4 5 6 7 8 9
CREATE (265) 17 18
DELETE (266) 57
DROP (267) 35 36
ERRORTOKEN (268) 59
EXECFILE (269) 4
FLOAT (270) 30
FROM (271) 37 57
INDEX (272) 18 36
INSERT (273) 50
INTEGER (274) 29
INTO (275) 50
KEY (276) 32 34
ON (277) 18
OR (278)
PRIMARY (279) 32 34
SHOW (280) 5
SELECT (281) 37
TABLE (282) 17 35
TABLES_IN_SHOW (283) 5
UNIQUE (284) 33
VALUES (285) 50
QUIT (286) 3
WHERE (287) 39
EQ (288) 44
NEQ (289) 45
LT (290) 46
GT (291) 47
LE (292) 48
GE (293) 49


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
stmt_list (45)
    on left: 1 2, on right: 0 2
stmt (46)
    on left: 3 4 5 6 7 8 9, on right: 1 2
sql_list (47)
    on left: 10 11, on right: 6 7 8 11
sql (48)
    on left: 12 13 14 15 16, on right: 10 11
create (49)
    on left: 17 18, on right: 12
table_name (50)
    on left: 19, on right: 17 18 35 37 50 57
index_name (51)
    on left: 20, on right: 18 36
column_name (52)
    on left: 21, on right: 18 42 43
create_table_element_list (53)
    on left: 22 23, on right: 17 23
create_table_element (54)
    on left: 24 25, on right: 22 23
column_def (55)
    on left: 26, on right: 24
data_type (56)
    on left: 27 28 29 30, on right: 26
column_def_opt (57)
    on left: 31 32 33, on right: 26
table_constraint_def (58)
    on left: 34, on right: 25
drop (59)
    on left: 35 36, on right: 13
select (60)
    on left: 37, on right: 14
opt_where (61)
    on left: 38 39, on right: 37 57
expr_list (62)
    on left: 40 41, on right: 39 41
expr (63)
    on left: 42 43, on right: 40 41
comparison (64)
    on left: 44 45 46 47 48 49, on right: 42 43
insert (65)
    on left: 50, on right: 15
insert_val_list (66)
    on left: 51 52, on right: 50 52
column_value_list (67)
    on left: 53 54, on right: 51 52 54
column_value (68)
    on left: 55 56, on right: 42 43 53 54
delete (69)
    on left: 57, on right: 16
error_statment (70)
    on left: 58 59, on right: 7 8 9


state 0

    0 $accept: . stmt_list $end

    error       shift, and go to state 1
    CREATE      shift, and go to state 2
    DELETE      shift, and go to state 3
    DROP        shift, and go to state 4
    ERRORTOKEN  shift, and go to state 5
    EXECFILE    shift, and go to state 6
    INSERT      shift, and go to state 7
    SHOW        shift, and go to state 8
    SELECT      shift, and go to state 9
    QUIT        shift, and go to state 10

    stmt_list       go to state 11
    stmt            go to state 12
    sql_list        go to state 13
    sql             go to state 14
    create          go to state 15
    drop            go to state 16
    select          go to state 17
    insert          go to state 18
    delete          go to state 19
    error_statment  go to state 20


state 1

   58 error_statment: error .

    $default  reduce using rule 58 (error_statment)


state 2

   17 create: CREATE . TABLE table_name '(' create_table_element_list ')'
   18       | CREATE . INDEX index_name ON table_name '(' column_name ')'

    INDEX  shift, and go to state 21
    TABLE  shift, and go to state 22


state 3

   57 delete: DELETE . FROM table_name opt_where

    FROM  shift, and go to state 23


state 4

   35 drop: DROP . TABLE table_name
   36     | DROP . INDEX index_name

    INDEX  shift, and go to state 24
    TABLE  shift, and go to state 25


state 5

   59 error_statment: ERRORTOKEN .

    $default  reduce using rule 59 (error_statment)


state 6

    4 stmt: EXECFILE . FILENAME CMD_FINISH

    FILENAME  shift, and go to state 26


state 7

   50 insert: INSERT . INTO table_name VALUES insert_val_list

    INTO  shift, and go to state 27


state 8

    5 stmt: SHOW . TABLES_IN_SHOW CMD_FINISH

    TABLES_IN_SHOW  shift, and go to state 28


state 9

   37 select: SELECT . '*' FROM table_name opt_where

    '*'  shift, and go to state 29


state 10

    3 stmt: QUIT . CMD_FINISH

    CMD_FINISH  shift, and go to state 30


state 11

    0 $accept: stmt_list . $end
    2 stmt_list: stmt_list . stmt

    $end        shift, and go to state 31
    error       shift, and go to state 1
    CREATE      shift, and go to state 2
    DELETE      shift, and go to state 3
    DROP        shift, and go to state 4
    ERRORTOKEN  shift, and go to state 5
    EXECFILE    shift, and go to state 6
    INSERT      shift, and go to state 7
    SHOW        shift, and go to state 8
    SELECT      shift, and go to state 9
    QUIT        shift, and go to state 10

    stmt            go to state 32
    sql_list        go to state 13
    sql             go to state 14
    create          go to state 15
    drop            go to state 16
    select          go to state 17
    insert          go to state 18
    delete          go to state 19
    error_statment  go to state 20


state 12

    1 stmt_list: stmt .

    $default  reduce using rule 1 (stmt_list)


state 13

    6 stmt: sql_list . CMD_FINISH
    7     | sql_list . ';' error_statment CMD_FINISH
    8     | sql_list . error_statment CMD_FINISH
   11 sql_list: sql_list . ';' sql

    error       shift, and go to state 1
    CMD_FINISH  shift, and go to state 33
    ERRORTOKEN  shift, and go to state 5
    ';'         shift, and go to state 34

    error_statment  go to state 35


state 14

   10 sql_list: sql .

    $default  reduce using rule 10 (sql_list)


state 15

   12 sql: create .

    $default  reduce using rule 12 (sql)


state 16

   13 sql: drop .

    $default  reduce using rule 13 (sql)


state 17

   14 sql: select .

    $default  reduce using rule 14 (sql)


state 18

   15 sql: insert .

    $default  reduce using rule 15 (sql)


state 19

   16 sql: delete .

    $default  reduce using rule 16 (sql)


state 20

    9 stmt: error_statment . CMD_FINISH

    CMD_FINISH  shift, and go to state 36


state 21

   18 create: CREATE INDEX . index_name ON table_name '(' column_name ')'

    NAME  shift, and go to state 37

    index_name  go to state 38


state 22

   17 create: CREATE TABLE . table_name '(' create_table_element_list ')'

    NAME  shift, and go to state 39

    table_name  go to state 40


state 23

   57 delete: DELETE FROM . table_name opt_where

    NAME  shift, and go to state 39

    table_name  go to state 41


state 24

   36 drop: DROP INDEX . index_name

    NAME  shift, and go to state 37

    index_name  go to state 42


state 25

   35 drop: DROP TABLE . table_name

    NAME  shift, and go to state 39

    table_name  go to state 43


state 26

    4 stmt: EXECFILE FILENAME . CMD_FINISH

    CMD_FINISH  shift, and go to state 44


state 27

   50 insert: INSERT INTO . table_name VALUES insert_val_list

    NAME  shift, and go to state 39

    table_name  go to state 45


state 28

    5 stmt: SHOW TABLES_IN_SHOW . CMD_FINISH

    CMD_FINISH  shift, and go to state 46


state 29

   37 select: SELECT '*' . FROM table_name opt_where

    FROM  shift, and go to state 47


state 30

    3 stmt: QUIT CMD_FINISH .

    $default  reduce using rule 3 (stmt)


state 31

    0 $accept: stmt_list $end .

    $default  accept


state 32

    2 stmt_list: stmt_list stmt .

    $default  reduce using rule 2 (stmt_list)


state 33

    6 stmt: sql_list CMD_FINISH .

    $default  reduce using rule 6 (stmt)


state 34

    7 stmt: sql_list ';' . error_statment CMD_FINISH
   11 sql_list: sql_list ';' . sql

    error       shift, and go to state 1
    CREATE      shift, and go to state 2
    DELETE      shift, and go to state 3
    DROP        shift, and go to state 4
    ERRORTOKEN  shift, and go to state 5
    INSERT      shift, and go to state 7
    SELECT      shift, and go to state 9

    sql             go to state 48
    create          go to state 15
    drop            go to state 16
    select          go to state 17
    insert          go to state 18
    delete          go to state 19
    error_statment  go to state 49


state 35

    8 stmt: sql_list error_statment . CMD_FINISH

    CMD_FINISH  shift, and go to state 50


state 36

    9 stmt: error_statment CMD_FINISH .

    $default  reduce using rule 9 (stmt)


state 37

   20 index_name: NAME .

    $default  reduce using rule 20 (index_name)


state 38

   18 create: CREATE INDEX index_name . ON table_name '(' column_name ')'

    ON  shift, and go to state 51


state 39

   19 table_name: NAME .

    $default  reduce using rule 19 (table_name)


state 40

   17 create: CREATE TABLE table_name . '(' create_table_element_list ')'

    '('  shift, and go to state 52


state 41

   57 delete: DELETE FROM table_name . opt_where

    WHERE  shift, and go to state 53

    $default  reduce using rule 38 (opt_where)

    opt_where  go to state 54


state 42

   36 drop: DROP INDEX index_name .

    $default  reduce using rule 36 (drop)


state 43

   35 drop: DROP TABLE table_name .

    $default  reduce using rule 35 (drop)


state 44

    4 stmt: EXECFILE FILENAME CMD_FINISH .

    $default  reduce using rule 4 (stmt)


state 45

   50 insert: INSERT INTO table_name . VALUES insert_val_list

    VALUES  shift, and go to state 55


state 46

    5 stmt: SHOW TABLES_IN_SHOW CMD_FINISH .

    $default  reduce using rule 5 (stmt)


state 47

   37 select: SELECT '*' FROM . table_name opt_where

    NAME  shift, and go to state 39

    table_name  go to state 56


state 48

   11 sql_list: sql_list ';' sql .

    $default  reduce using rule 11 (sql_list)


state 49

    7 stmt: sql_list ';' error_statment . CMD_FINISH

    CMD_FINISH  shift, and go to state 57


state 50

    8 stmt: sql_list error_statment CMD_FINISH .

    $default  reduce using rule 8 (stmt)


state 51

   18 create: CREATE INDEX index_name ON . table_name '(' column_name ')'

    NAME  shift, and go to state 39

    table_name  go to state 58


state 52

   17 create: CREATE TABLE table_name '(' . create_table_element_list ')'

    NAME     shift, and go to state 59
    PRIMARY  shift, and go to state 60

    create_table_element_list  go to state 61
    create_table_element       go to state 62
    column_def                 go to state 63
    table_constraint_def       go to state 64


state 53

   39 opt_where: WHERE . expr_list

    NUMBER  shift, and go to state 65
    NAME    shift, and go to state 66
    STRING  shift, and go to state 67

    column_name   go to state 68
    expr_list     go to state 69
    expr          go to state 70
    column_value  go to state 71


state 54

   57 delete: DELETE FROM table_name opt_where .

    $default  reduce using rule 57 (delete)


state 55

   50 insert: INSERT INTO table_name VALUES . insert_val_list

    '('  shift, and go to state 72

    insert_val_list  go to state 73


state 56

   37 select: SELECT '*' FROM table_name . opt_where

    WHERE  shift, and go to state 53

    $default  reduce using rule 38 (opt_where)

    opt_where  go to state 74


state 57

    7 stmt: sql_list ';' error_statment CMD_FINISH .

    $default  reduce using rule 7 (stmt)


state 58

   18 create: CREATE INDEX index_name ON table_name . '(' column_name ')'

    '('  shift, and go to state 75


state 59

   26 column_def: NAME . data_type column_def_opt

    CHAR     shift, and go to state 76
    FLOAT    shift, and go to state 77
    INTEGER  shift, and go to state 78

    data_type  go to state 79


state 60

   34 table_constraint_def: PRIMARY . KEY '(' NAME ')'

    KEY  shift, and go to state 80


state 61

   17 create: CREATE TABLE table_name '(' create_table_element_list . ')'
   23 create_table_element_list: create_table_element_list . ',' create_table_element

    ')'  shift, and go to state 81
    ','  shift, and go to state 82


state 62

   22 create_table_element_list: create_table_element .

    $default  reduce using rule 22 (create_table_element_list)


state 63

   24 create_table_element: column_def .

    $default  reduce using rule 24 (create_table_element)


state 64

   25 create_table_element: table_constraint_def .

    $default  reduce using rule 25 (create_table_element)


state 65

   56 column_value: NUMBER .

    $default  reduce using rule 56 (column_value)


state 66

   21 column_name: NAME .

    $default  reduce using rule 21 (column_name)


state 67

   55 column_value: STRING .

    $default  reduce using rule 55 (column_value)


state 68

   43 expr: column_name . comparison column_value

    EQ   shift, and go to state 83
    NEQ  shift, and go to state 84
    LT   shift, and go to state 85
    GT   shift, and go to state 86
    LE   shift, and go to state 87
    GE   shift, and go to state 88

    comparison  go to state 89


state 69

   39 opt_where: WHERE expr_list .
   41 expr_list: expr_list . SYS_AND expr

    SYS_AND  shift, and go to state 90

    $default  reduce using rule 39 (opt_where)


state 70

   40 expr_list: expr .

    $default  reduce using rule 40 (expr_list)


state 71

   42 expr: column_value . comparison column_name

    EQ   shift, and go to state 83
    NEQ  shift, and go to state 84
    LT   shift, and go to state 85
    GT   shift, and go to state 86
    LE   shift, and go to state 87
    GE   shift, and go to state 88

    comparison  go to state 91


state 72

   51 insert_val_list: '(' . column_value_list ')'

    NUMBER  shift, and go to state 65
    STRING  shift, and go to state 67

    column_value_list  go to state 92
    column_value       go to state 93


state 73

   50 insert: INSERT INTO table_name VALUES insert_val_list .
   52 insert_val_list: insert_val_list . ',' '(' column_value_list ')'

    ','  shift, and go to state 94

    $default  reduce using rule 50 (insert)


state 74

   37 select: SELECT '*' FROM table_name opt_where .

    $default  reduce using rule 37 (select)


state 75

   18 create: CREATE INDEX index_name ON table_name '(' . column_name ')'

    NAME  shift, and go to state 66

    column_name  go to state 95


state 76

   27 data_type: CHAR .
   28          | CHAR . '(' NUMBER ')'

    '('  shift, and go to state 96

    $default  reduce using rule 27 (data_type)


state 77

   30 data_type: FLOAT .

    $default  reduce using rule 30 (data_type)


state 78

   29 data_type: INTEGER .

    $default  reduce using rule 29 (data_type)


state 79

   26 column_def: NAME data_type . column_def_opt

    PRIMARY  shift, and go to state 97
    UNIQUE   shift, and go to state 98

    $default  reduce using rule 31 (column_def_opt)

    column_def_opt  go to state 99


state 80

   34 table_constraint_def: PRIMARY KEY . '(' NAME ')'

    '('  shift, and go to state 100


state 81

   17 create: CREATE TABLE table_name '(' create_table_element_list ')' .

    $default  reduce using rule 17 (create)


state 82

   23 create_table_element_list: create_table_element_list ',' . create_table_element

    NAME     shift, and go to state 59
    PRIMARY  shift, and go to state 60

    create_table_element  go to state 101
    column_def            go to state 63
    table_constraint_def  go to state 64


state 83

   44 comparison: EQ .

    $default  reduce using rule 44 (comparison)


state 84

   45 comparison: NEQ .

    $default  reduce using rule 45 (comparison)


state 85

   46 comparison: LT .

    $default  reduce using rule 46 (comparison)


state 86

   47 comparison: GT .

    $default  reduce using rule 47 (comparison)


state 87

   48 comparison: LE .

    $default  reduce using rule 48 (comparison)


state 88

   49 comparison: GE .

    $default  reduce using rule 49 (comparison)


state 89

   43 expr: column_name comparison . column_value

    NUMBER  shift, and go to state 65
    STRING  shift, and go to state 67

    column_value  go to state 102


state 90

   41 expr_list: expr_list SYS_AND . expr

    NUMBER  shift, and go to state 65
    NAME    shift, and go to state 66
    STRING  shift, and go to state 67

    column_name   go to state 68
    expr          go to state 103
    column_value  go to state 71


state 91

   42 expr: column_value comparison . column_name

    NAME  shift, and go to state 66

    column_name  go to state 104


state 92

   51 insert_val_list: '(' column_value_list . ')'
   54 column_value_list: column_value_list . ',' column_value

    ')'  shift, and go to state 105
    ','  shift, and go to state 106


state 93

   53 column_value_list: column_value .

    $default  reduce using rule 53 (column_value_list)


state 94

   52 insert_val_list: insert_val_list ',' . '(' column_value_list ')'

    '('  shift, and go to state 107


state 95

   18 create: CREATE INDEX index_name ON table_name '(' column_name . ')'

    ')'  shift, and go to state 108


state 96

   28 data_type: CHAR '(' . NUMBER ')'

    NUMBER  shift, and go to state 109


state 97

   32 column_def_opt: PRIMARY . KEY

    KEY  shift, and go to state 110


state 98

   33 column_def_opt: UNIQUE .

    $default  reduce using rule 33 (column_def_opt)


state 99

   26 column_def: NAME data_type column_def_opt .

    $default  reduce using rule 26 (column_def)


state 100

   34 table_constraint_def: PRIMARY KEY '(' . NAME ')'

    NAME  shift, and go to state 111


state 101

   23 create_table_element_list: create_table_element_list ',' create_table_element .

    $default  reduce using rule 23 (create_table_element_list)


state 102

   43 expr: column_name comparison column_value .

    $default  reduce using rule 43 (expr)


state 103

   41 expr_list: expr_list SYS_AND expr .

    $default  reduce using rule 41 (expr_list)


state 104

   42 expr: column_value comparison column_name .

    $default  reduce using rule 42 (expr)


state 105

   51 insert_val_list: '(' column_value_list ')' .

    $default  reduce using rule 51 (insert_val_list)


state 106

   54 column_value_list: column_value_list ',' . column_value

    NUMBER  shift, and go to state 65
    STRING  shift, and go to state 67

    column_value  go to state 112


state 107

   52 insert_val_list: insert_val_list ',' '(' . column_value_list ')'

    NUMBER  shift, and go to state 65
    STRING  shift, and go to state 67

    column_value_list  go to state 113
    column_value       go to state 93


state 108

   18 create: CREATE INDEX index_name ON table_name '(' column_name ')' .

    $default  reduce using rule 18 (create)


state 109

   28 data_type: CHAR '(' NUMBER . ')'

    ')'  shift, and go to state 114


state 110

   32 column_def_opt: PRIMARY KEY .

    $default  reduce using rule 32 (column_def_opt)


state 111

   34 table_constraint_def: PRIMARY KEY '(' NAME . ')'

    ')'  shift, and go to state 115


state 112

   54 column_value_list: column_value_list ',' column_value .

    $default  reduce using rule 54 (column_value_list)


state 113

   52 insert_val_list: insert_val_list ',' '(' column_value_list . ')'
   54 column_value_list: column_value_list . ',' column_value

    ')'  shift, and go to state 116
    ','  shift, and go to state 106


state 114

   28 data_type: CHAR '(' NUMBER ')' .

    $default  reduce using rule 28 (data_type)


state 115

   34 table_constraint_def: PRIMARY KEY '(' NAME ')' .

    $default  reduce using rule 34 (table_constraint_def)


state 116

   52 insert_val_list: insert_val_list ',' '(' column_value_list ')' .

    $default  reduce using rule 52 (insert_val_list)
